# libdex

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  dex.py  doc.md  instruments.txt  lx.py  main.cpp  native.py
src/: analyze.cpp  analyze.h  capi.cpp  capi.h  dex.cpp  dex.h  dexheader.h  dexstruct.h  inst.cpp  inst.h  inst_enum.h  instformat.cpp  instformat.h  insttype.cpp  insttype.h  main.cpp  reader.cpp  reader.h  repackage.cpp  ustring.cpp  ustring.h  ustring_encoding.cpp
tools/: CMakeLists.txt  leak.cpp  resource.cpp
